--- a/index.html
+++ b/index.html
@@ -20,19 +20,35 @@
   </style>
 </head>
 <body>
+  <main>
+    <div class= "card-left">
+      <h1>Get <span>insights</span> that help your business grow.</h1>
+      <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.</p>
 
-  Get insights that help your business grow.
+      <ul>
+        <li>
+          <p>10k+</p>
+          <p>companies</p>
+        </li>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+        <li>
+          <p>314</p>
+          <p>templates</p>
+        </li>
 
-  10k+ companies
-  314 templates
-  12m+ queries
+        <li>
+          <p>12m+</p>
+          <p>queries</p>
+        </li>
+      </ul>
+    </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="card-right">
+      <img src="./images/image-header-desktop.jpg" alt="image of people working">
+    </div>
+
+
+  </main>
 </body>
 </html>
