changed p to span on li

--- a/index.html
+++ b/index.html
@@ -28,18 +28,21 @@
 
       <ul>
         <li>
-          <p>10k+</p>
-          <p>companies</p>
+          <p>10k+
+            <span>companies</span>
+          </p>
         </li>
 
         <li>
-          <p>314</p>
-          <p>templates</p>
+          <p>314
+            <span>templates</span>
+          </p>
         </li>
 
         <li>
-          <p>12m+</p>
-          <p>queries</p>
+          <p>12m+
+            <span>queries</span>
+          </p>
         </li>
       </ul>
     </div>
