--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 </head>
 <body>
   <main>
+    <picture class="card-right">
+      <img src="./images/image-header-desktop.jpg" alt="image of people working">
+    </picture>
+
     <div class= "card-left">
       <h1>Get <span>insights</span> that help your business grow.</h1>
       <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
@@ -46,12 +50,6 @@
         </li>
       </ul>
     </div>
-
-    <div class="card-right">
-      <img src="./images/image-header-desktop.jpg" alt="image of people working">
-    </div>
-
-
   </main>
 </body>
 </html>
