--- a/index.html
+++ b/index.html
@@ -23,29 +23,33 @@
   <main>
     
     <div class= "card-left">
-      <h1>Get <span>insights</span> that help your business grow.</h1>
-      <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+      <div class="text-info">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
+        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer 
         experience, and overall efficiency.</p>
+      </div>
 
-      <ul>
-        <li>
-          <p>10k+
-            <span>companies</span>
-          </p>
-        </li>
+      <div class="num-info">
+        <ul>
+          <li>
+            <p>10k+
+              <span>companies</span>
+            </p>
+          </li>
 
-        <li>
-          <p>314
-            <span>templates</span>
-          </p>
-        </li>
+          <li>
+            <p>314
+              <span>templates</span>
+            </p>
+          </li>
 
-        <li>
-          <p>12m+
-            <span>queries</span>
-          </p>
-        </li>
-      </ul>
+          <li>
+            <p>12m+
+              <span>queries</span>
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
     <picture class="card-right">
       <img src="./images/image-header-desktop.jpg" alt="image of people working">
