changed imag  to div

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <picture class="card-right">
-      <img src="./images/image-header-desktop.jpg" alt="image of people working">
+      <div class="overlay"></div>
     </picture>
   </main>
 </body>
