--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <main>
-    
+    <div class="container">
     <div class= "card-left">
       <div class="text-info">
         <h1>Get <span>insights</span> that help your business grow.</h1>
@@ -54,6 +54,7 @@
     <picture class="card-right">
       <div class="overlay"></div>
     </picture>
+  </div>
   </main>
 </body>
 </html>
